// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LibraryAsset context provider should provide currentWML 1`] = `
"
<Asset key=(Test) fileName=\\"test\\">
    <Import from=(BASE)>
        <Use key=(basePower) type=\\"Variable\\" as=(power) />
        <Use key=(DEF) type=\\"Room\\" />
    </Import>
    <Feature key=(clockTower)>
        <Description>
            A worn stone clock tower.
        </Description>
    </Feature>
    <Room key=(ABC)>
        <Name>Vortex</Name>
        <Description>
            Vortex
            <Link to=(toggleOpen)>(toggle)</Link>
        </Description>
    </Room>
    <If {open}>
        <Room key=(ABC)>
            <Exit to=(DEF)>welcome</Exit>
        </Room>
    </If>
    <Room key=(DEF)>
        <Name>Welcome</Name>
        <Exit to=(ABC)>vortex</Exit>
    </Room>
    <Variable key=(open) default={false} />
    <Action key=(toggleOpen) src={open = !open} />
</Asset>
"
`;

exports[`LibraryAsset context provider should provide features 1`] = `
<div>
  <div>
    <div>
      <span />
      <span>
        String
      </span>
      <span>
        A worn stone clock tower.
      </span>
    </div>
  </div>
</div>
`;

exports[`LibraryAsset context provider should provide normalForm 1`] = `
"{
    \\"Test\\": {
        \\"key\\": \\"Test\\",
        \\"tag\\": \\"Asset\\",
        \\"instance\\": false,
        \\"Story\\": false,
        \\"fileName\\": \\"test\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [],
                \\"contents\\": [
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"clockTower\\",
                        \\"tag\\": \\"Feature\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"ABC\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"If-0\\",
                        \\"tag\\": \\"If\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    },
                    {
                        \\"key\\": \\"open\\",
                        \\"tag\\": \\"Variable\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"toggleOpen\\",
                        \\"tag\\": \\"Action\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"Import-0\\": {
        \\"key\\": \\"Import-0\\",
        \\"tag\\": \\"Import\\",
        \\"from\\": \\"BASE\\",
        \\"mapping\\": {
            \\"power\\": {
                \\"key\\": \\"basePower\\",
                \\"type\\": \\"Variable\\"
            },
            \\"DEF\\": {
                \\"key\\": \\"DEF\\",
                \\"type\\": \\"Room\\"
            }
        },
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [
                    {
                        \\"key\\": \\"power\\",
                        \\"tag\\": \\"Variable\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"power\\": {
        \\"key\\": \\"power\\",
        \\"tag\\": \\"Variable\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"DEF\\": {
        \\"key\\": \\"DEF\\",
        \\"tag\\": \\"Room\\",
        \\"global\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [],
                \\"render\\": [],
                \\"name\\": []
            },
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [
                    {
                        \\"tag\\": \\"Exit\\",
                        \\"key\\": \\"DEF#ABC\\",
                        \\"index\\": 0
                    }
                ],
                \\"render\\": [],
                \\"name\\": [
                    {
                        \\"tag\\": \\"String\\",
                        \\"value\\": \\"Welcome\\"
                    }
                ]
            }
        ]
    },
    \\"clockTower\\": {
        \\"key\\": \\"clockTower\\",
        \\"tag\\": \\"Feature\\",
        \\"global\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [],
                \\"render\\": [
                    {
                        \\"tag\\": \\"String\\",
                        \\"value\\": \\"A worn stone clock tower.\\"
                    }
                ],
                \\"name\\": []
            }
        ]
    },
    \\"ABC\\": {
        \\"key\\": \\"ABC\\",
        \\"tag\\": \\"Room\\",
        \\"global\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [],
                \\"render\\": [
                    {
                        \\"tag\\": \\"String\\",
                        \\"value\\": \\"Vortex \\"
                    },
                    {
                        \\"tag\\": \\"Link\\",
                        \\"to\\": \\"toggleOpen\\",
                        \\"text\\": \\"(toggle)\\",
                        \\"targetTag\\": \\"Action\\"
                    }
                ],
                \\"name\\": [
                    {
                        \\"tag\\": \\"String\\",
                        \\"value\\": \\"Vortex\\"
                    }
                ]
            },
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"If-0\\",
                        \\"tag\\": \\"If\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [
                    {
                        \\"tag\\": \\"Exit\\",
                        \\"key\\": \\"ABC#DEF\\",
                        \\"index\\": 0
                    }
                ],
                \\"render\\": [],
                \\"name\\": []
            }
        ]
    },
    \\"If-0\\": {
        \\"key\\": \\"If-0\\",
        \\"tag\\": \\"If\\",
        \\"conditions\\": [
            {
                \\"if\\": \\"open\\",
                \\"dependencies\\": [
                    \\"open\\"
                ]
            }
        ],
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": [
                    {
                        \\"key\\": \\"ABC\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    }
                ]
            }
        ]
    },
    \\"ABC#DEF\\": {
        \\"key\\": \\"ABC#DEF\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"DEF\\",
        \\"from\\": \\"ABC\\",
        \\"name\\": \\"welcome\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"If-0\\",
                        \\"tag\\": \\"If\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"ABC\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    }
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"DEF#ABC\\": {
        \\"key\\": \\"DEF#ABC\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"ABC\\",
        \\"from\\": \\"DEF\\",
        \\"name\\": \\"vortex\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    }
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"open\\": {
        \\"key\\": \\"open\\",
        \\"tag\\": \\"Variable\\",
        \\"default\\": \\"false\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"toggleOpen\\": {
        \\"key\\": \\"toggleOpen\\",
        \\"tag\\": \\"Action\\",
        \\"src\\": \\"open = !open\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"contents\\": []
            }
        ]
    }
}"
`;

exports[`LibraryAsset context provider should provide rooms 1`] = `
<div>
  <div>
    <div>
      <span>
        
        
        
        
        
        
        
      </span>
      <span>
        String
      </span>
      <span>
        A welcome area
      </span>
    </div>
    <div>
      <span>
        
        
        
        
        
        
      </span>
      <span>
        String
      </span>
      <span>
        Vortex 
      </span>
      <span>
        Link
      </span>
      <span>
        toggleOpen
      </span>
    </div>
  </div>
</div>
`;
